--- a/views/layouts/sign/template.erb
+++ b/views/layouts/sign/template.erb
@@ -9,7 +9,7 @@
 
         <title><%= @title|| "Default Page" %></title>
 
-        <link href="/css/styles.css" rel="stylesheet" />
+        <link href="/admin_assets/css/styles.css" rel="stylesheet" />
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
     </head>
     <body class="bg-primary">
@@ -39,6 +39,6 @@
             </div>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-        <script src="/js/scripts.js"></script>
+        <script src="/admin_assets/js/scripts.js"></script>
     </body>
 </html>
