--- a/views/sign/login.erb
+++ b/views/sign/login.erb
@@ -1,6 +1,8 @@
 <div class="col-lg-5">
     <div class="card shadow-lg border-0 rounded-lg mt-5">
-        <div class="card-header"><h3 class="text-center font-weight-light my-4">Login</h3></div>
+        <div class="card-header">
+            <h3 class="text-center font-weight-light my-4">Login</h3>
+        </div>
         <div class="card-body">
             <form>
                 <div class="form-floating mb-3">
@@ -17,12 +19,12 @@
                 </div>
                 <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
                     <a class="small" href="password.html">Forgot Password?</a>
-                    <a class="btn btn-primary" href="index.html">Login</a>
+                    <a class="btn btn-primary" href="/">Login</a>
                 </div>
             </form>
         </div>
         <div class="card-footer text-center py-3">
-            <div class="small"><a href="register.html">Need an account? Sign up!</a></div>
+            <div class="small">Need an account? <a href="/register">Sign up!</a></div>
         </div>
     </div>
 </div>
