update register & login page, create reset_password.erb page

--- a/views/layouts/sign/template.erb
+++ b/views/layouts/sign/template.erb
@@ -8,9 +8,9 @@
         <meta name="author" content="Sign IN" />
 
         <title><%= @title|| "Default Page" %></title>
-
         <link href="/admin_assets/css/styles.css" rel="stylesheet" />
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+        <link href="/admin_assets/css/lorem.css" rel="stylesheet" />
     </head>
     <body class="bg-primary">
         <div id="layoutAuthentication">
