--- a/views/sign/register.erb
+++ b/views/sign/register.erb
@@ -3,37 +3,43 @@
         <div class="card-header">
             <h3 class="text-center font-weight-light my-4">Create Account</h3>
         </div>
+
         <div class="card-body">
             <form>
                 <div class="row mb-3">
                     <div class="col-md-6">
                         <div class="form-floating mb-3 mb-md-0">
-                            <input class="form-control" id="inputFirstName" type="text" placeholder="Enter your first name" />
-                            <label for="inputFirstName">First name</label>
+                            <input class="form-control" id="first_name" type="text" placeholder="Enter your first name" />
+                            <label for="first_name">First name</label>
+                            <div class="text-danger text-alert">Cannot Be Null</div>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="form-floating">
                             <input class="form-control" id="inputLastName" type="text" placeholder="Enter your last name" />
                             <label for="inputLastName">Last name</label>
+                            <div class="text-danger text-alert">Cannot Be Null</div>
                         </div>
                     </div>
                 </div>
                 <div class="form-floating mb-3">
                     <input class="form-control" id="inputEmail" type="email" placeholder="name@example.com" />
                     <label for="inputEmail">Email address</label>
+                    <div class="text-danger text-alert">Cannot Be Null</div>
                 </div>
                 <div class="row mb-3">
                     <div class="col-md-6">
                         <div class="form-floating mb-3 mb-md-0">
                             <input class="form-control" id="inputPassword" type="password" placeholder="Create a password" />
                             <label for="inputPassword">Password</label>
+                            <div class="text-danger text-alert">Cannot Be Null</div>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="form-floating mb-3 mb-md-0">
                             <input class="form-control" id="inputPasswordConfirm" type="password" placeholder="Confirm password" />
                             <label for="inputPasswordConfirm">Confirm Password</label>
+                            <div class="text-danger text-alert">Cannot Be Null</div>
                         </div>
                     </div>
                 </div>
