--- a/views/layouts/sign/template.erb
+++ b/views/layouts/sign/template.erb
@@ -10,7 +10,7 @@
         <title><%= @title|| "Default Page" %></title>
         <link href="/admin_assets/css/styles.css" rel="stylesheet" />
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
-        <link href="/admin_assets/css/lorem.css" rel="stylesheet" />
+        <link href="/admin_assets/css/admin_style.css" rel="stylesheet" />
     </head>
     <body class="bg-primary">
         <div id="layoutAuthentication">
