update register page

--- a/views/sign/register.erb
+++ b/views/sign/register.erb
@@ -5,6 +5,10 @@
         </div>
 
         <div class="card-body">
+            <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                <strong>Error Message</strong> Prove Yourself Successful
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
             <form>
                 <div class="col col-md-12 mb-3">
                     <label for="name" class="form-label">Name</label>
@@ -12,39 +16,35 @@
                     <div class="text-danger text-alert">Error Message</div>
                 </div>
                 
-                <div class="col col-md-12 mb-3">
-                    <label for="username" class="form-label">Username</label>
-                    <input type="username" class="form-control" id="username" name="username">
-                    <div class="text-danger text-alert">Error Message</div>
+                <div class="row mb-3">
+                    <div class="col-md-6 mb-3 mb-md-0">
+                        <label for="username" class="form-label">Username</label>
+                        <input type="username" class="form-control" id="username" name="username">
+                        <div class="text-danger text-alert">Error Message</div>
+                    </div>
+                    <div class="col-md-6 mb-3 mb-md-0">
+                        <label for="email" class="form-label">Email</label>
+                        <input type="email" class="form-control" id="email" name="email">
+                        <div class="text-danger text-alert">Error Message</div>
+                    </div>
                 </div>
 
-                <div class="col col-md-12 mb-3">
-                    <label for="email" class="form-label">Email</label>
-                    <input type="email" class="form-control" id="email" name="email">
-                    <div class="text-danger text-alert">Error Message</div>
-                </div>
-
-                <div class="col col-md-12 mb-3">
-                    <label for="password" class="form-label">Password</label>
-                    <input type="password" class="form-control" id="password" name="password">
-                    <div class="text-danger text-alert">Error Message</div>
-                </div>
-
-                <div class="col col-md-12 mb-3">
-                    <label for="birthdate" class="form-label">Birthdate</label>
-                    <input type="date" class="form-control" id="birthdate" name="birthdate">
-                    <div class="text-danger text-alert">Error Message</div>
+                <div class="row mb-3">
+                    <div class="col-md-6 mb-3 mb-md-0">
+                        <label for="phone" class="form-label">Phone</label>
+                        <input type="number" class="form-control" id="phone" name="phone" min="0">
+                        <div class="text-danger text-alert">Error Message</div>
+                    </div>
+                    <div class="col-md-6 mb-3 mb-md-0">
+                        <label for="birthdate" class="form-label">Birthdate</label>
+                        <input type="date" class="form-control" id="birthdate" name="birthdate">
+                        <div class="text-danger text-alert">Error Message</div>
+                    </div>
                 </div>
 
                 <div class="col col-md-12 mb-3">
                     <label for="address" class="form-label">Address</label>
                     <textarea class="form-control" id="address" rows="3"></textarea>
-                    <div class="text-danger text-alert">Error Message</div>
-                </div>
-
-                <div class="col col-md-12 mb-3">
-                    <label for="phone" class="form-label">Phone</label>
-                    <input type="number" class="form-control" id="phone" name="phone" min="0">
                     <div class="text-danger text-alert">Error Message</div>
                 </div>
 
