--- a/views/sign/register.erb
+++ b/views/sign/register.erb
@@ -1,30 +1,36 @@
-<div class="col-lg-7">
-    <div class="card shadow-lg border-0 rounded-lg mt-5">
+<div class="col-lg-8">
+    <div class="card shadow-lg border-0 rounded-lg mt-5 mb-5">
         <div class="card-header">
-            <h3 class="text-center font-weight-light my-4">Create Account</h3>
+            <h3 class="text-center font-weight-light my-4">Create An Account</h3>
         </div>
 
         <div class="card-body">
-            <div class="alert alert-warning alert-dismissible fade show" role="alert">
-                <strong>Error Message</strong> Prove Yourself Successful
-                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-            </div>
-            <form>
-                <div class="col col-md-12 mb-3">
+
+            <!-- Display errors if present -->
+            <% if @errors&.any? %> 
+                <% @errors.each do |error| %>
+                    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                        <strong><%= error %> </strong>
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
+                <% end %>
+            <% end %>
+            <form action="/register" method="post" enctype="multipart/form-data">
+                <div class="col-md-12 mb-3">
                     <label for="name" class="form-label">Name</label>
-                    <input type="text" class="form-control" id="name" name="name">
+                    <input type="text" class="form-control" id="name" name="name" placeholder="Name" value="<%= params[:name]%>" >
                     <div class="text-danger text-alert">Error Message</div>
                 </div>
                 
                 <div class="row mb-3">
                     <div class="col-md-6 mb-3 mb-md-0">
                         <label for="username" class="form-label">Username</label>
-                        <input type="username" class="form-control" id="username" name="username">
+                        <input type="username" class="form-control" id="username" name="username" placeholder="Username" value="<%= params[:username]%>" >
                         <div class="text-danger text-alert">Error Message</div>
                     </div>
                     <div class="col-md-6 mb-3 mb-md-0">
-                        <label for="email" class="form-label">Email</label>
-                        <input type="email" class="form-control" id="email" name="email">
+                        <label for="password" class="form-label">Password</label>
+                        <input type="password" class="form-control" id="password" name="password" value="<%= params[:password]%>">
                         <div class="text-danger text-alert">Error Message</div>
                     </div>
                 </div>
@@ -32,29 +38,38 @@
                 <div class="row mb-3">
                     <div class="col-md-6 mb-3 mb-md-0">
                         <label for="phone" class="form-label">Phone</label>
-                        <input type="number" class="form-control" id="phone" name="phone" min="0">
+                        <input type="number" class="form-control" id="phone" name="phone" min="0" value="<%= params[:phone]%>" >
                         <div class="text-danger text-alert">Error Message</div>
                     </div>
                     <div class="col-md-6 mb-3 mb-md-0">
-                        <label for="birthdate" class="form-label">Birthdate</label>
-                        <input type="date" class="form-control" id="birthdate" name="birthdate">
+                        <label for="email" class="form-label">Email</label>
+                        <input type="email" class="form-control" id="email" name="email" value="<%= params[:email]%>" >
                         <div class="text-danger text-alert">Error Message</div>
+                    </div>
+                </div>
+
+                <div class="row mb-3">
+                    <div class="col-md-6 mb-3 mb-md-0">
+                        <label for="birthdate" class="form-label">Birthdate</label>
+                        <input type="date" class="form-control" id="birthdate" name="birthdate" value="<%= params[:birthdate]%>" >
+                        <div class="text-danger text-alert">Error Message</div>
+                    </div>
+                    <div class="col-md-6 mb-3 mb-md-0">
+                        <label for="photo" class="form-label">Photo</label>
+                        <input class="form-control" type="file" id="photo" name="photo" />
                     </div>
                 </div>
 
                 <div class="col col-md-12 mb-3">
                     <label for="address" class="form-label">Address</label>
-                    <textarea class="form-control" id="address" rows="3"></textarea>
+                    <textarea class="form-control" id="address" rows="3" value="<%= params[:address]%>" ></textarea>
                     <div class="text-danger text-alert">Error Message</div>
                 </div>
 
-                <div class="col col-md-12 mb-3">
-                    <label for="photo" class="form-label">Photo</label>
-                    <input class="form-control" type="file" id="photo">
-                </div>
-
                 <div class="mt-4 mb-0">
-                    <div class="d-grid"><a class="btn btn-primary btn-block" href="/">Create Account</a></div>
+                    <div class="d-grid">
+                        <button type="submit" class="btn btn-primary">Submit</>
+                    </div>
                 </div>
             </form>
         </div>
