--- a/views/sign/login.erb
+++ b/views/sign/login.erb
@@ -7,16 +7,16 @@
         <div class="card-body">
             <form>
                 <div class="form-floating mb-3">
-                    <input class="form-control" id="inputEmail" type="email" placeholder="name@example.com" />
-                    <label for="inputEmail">Email address</label>
+                    <input class="form-control" id="email" type="email" placeholder="Input Your Email" />
+                    <label for="email">Email address</label>
                 </div>
                 <div class="form-floating mb-3">
-                    <input class="form-control" id="inputPassword" type="password" placeholder="Password" />
-                    <label for="inputPassword">Password</label>
+                    <input class="form-control" id="password" type="password" placeholder="Input Your Password" />
+                    <label for="password">Password</label>
                 </div>
                 <div class="form-check mb-3">
-                    <input class="form-check-input" id="inputRememberPassword" type="checkbox" value="" />
-                    <label class="form-check-label" for="inputRememberPassword">Remember Password</label>
+                    <input class="form-check-input" id="remember" type="checkbox" value="" />
+                    <label class="form-check-label" for="remember">Remember Password</label>
                 </div>
                 <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
                     <a class="small" href="/reset_password">Forgot Password?</a>
