update controller & pages

--- a/views/sign/reset_password.erb
+++ b/views/sign/reset_password.erb
@@ -9,7 +9,7 @@
                     <label for="inputEmail">Email address</label>
                 </div>
                 <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
-                    <a class="small" href="/">Return to login</a>
+                    <a class="small" href="/login">Return to login</a>
                     <a class="btn btn-primary" href="/reset_password">Reset Password</a>
                 </div>
             </form>
