--- a/views/sign/register.erb
+++ b/views/sign/register.erb
@@ -71,7 +71,7 @@
             </form>
         </div>
         <div class="card-footer text-center py-3">
-            <div class="small">Have an account?<a href="/"> Go to login</a></div>
+            <div class="small">Have an account?<a href="/login"> Go to login</a></div>
         </div>
     </div>
 </div>
