--- a/views/sign/login.erb
+++ b/views/sign/login.erb
@@ -5,13 +5,13 @@
         </div>
         
         <div class="card-body">
-            <form>
+            <form action="/login" method="post">
                 <div class="form-floating mb-3">
-                    <input class="form-control" id="email" type="email" placeholder="Input Your Email" />
+                    <input class="form-control" id="email" name="email" type="email" placeholder="Input Your Email" />
                     <label for="email">Email address</label>
                 </div>
                 <div class="form-floating mb-3">
-                    <input class="form-control" id="password" type="password" placeholder="Input Your Password" />
+                    <input class="form-control" id="password" name="password" type="password" placeholder="Input Your Password" />
                     <label for="password">Password</label>
                 </div>
                 <div class="form-check mb-3">
@@ -20,7 +20,7 @@
                 </div>
                 <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
                     <a class="small" href="/reset_password">Forgot Password?</a>
-                    <a class="btn btn-primary" href="/">Login</a>
+                    <button type="submit" class="btn btn-primary">Login</button>
                 </div>
             </form>
         </div>
