update login.erb, register.erb, & main.rb

--- a/views/sign/register.erb
+++ b/views/sign/register.erb
@@ -56,7 +56,7 @@
 
                 <div class="col-md-12 mb-3">
                     <label for="address" class="form-label">Address</label>
-                    <textarea class="form-control" id="address" rows="3" value="<%= params[:address]%>" ></textarea>
+                    <textarea class="form-control" id="address" name="address" rows="3"><%= params[:address] %></textarea>
                 </div>
 
                 <div class="col-md-12 mb-3">
