update register page

--- a/views/sign/register.erb
+++ b/views/sign/register.erb
@@ -24,7 +24,7 @@
                 <div class="row mb-3">
                     <div class="col-md-6 mb-3 mb-md-0">
                         <label for="username" class="form-label">Username</label>
-                        <input type="username" class="form-control" id="username" name="username" placeholder="Username" value="<%= params[:username]%>" >
+                        <input type="text" class="form-control" id="username" name="username" placeholder="Username" value="<%= params[:username]%>" >
                     </div>
                     <div class="col-md-6 mb-3 mb-md-0">
                         <label for="password" class="form-label">Password</label>
