--- a/views/admin/index.erb
+++ b/views/admin/index.erb
@@ -47,6 +47,13 @@
             DataTable Example
         </div>
         <div class="card-body">
+            <% if session[:success] %>
+                <div class="alert alert-success alert-dismissible fade show" role="alert">
+                    <strong><%= session[:success] %></strong>
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+                <% session[:success] = nil %>
+            <% end %>
             <table id="datatablesSimple">
                 <thead>
                     <tr>
