adding access view in user lists

--- a/views/admin/index.erb
+++ b/views/admin/index.erb
@@ -85,7 +85,7 @@
                                 <p>No Photo Available</p>
                             <% end %>
                         </td>
-                        <th>3</th>
+                        <th><%= user['access']%></th>
                     </tr>
                     <% end %>
                 </tbody>
