--- a/views/layouts/user/template.erb
+++ b/views/layouts/user/template.erb
@@ -21,31 +21,33 @@
               <a class="nav-link active text-warning" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="#">Link</a>
+              <a class="nav-link text-white" href="#">Items</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Dropdown
+                Grade
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="#">Admin</a></li>
+                <li><a class="dropdown-item" href="#">User</a></li>
                 <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                <li><a class="dropdown-item" href="#">Seller</a></li>
               </ul>
             </li>
           </ul>
-          <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
-            <button class="btn btn-outline-primary" type="submit">Search</button>
-          </form>
+
+          <!-- Right-aligned nav items (Login & Register) -->
+          <ul class="navbar-nav mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link text-white" href="/login">Login</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="/register">Register</a>
+            </li>
+          </ul>
         </div>
       </div>
     </nav>
-
-    <a class="nav-link" href="/login">Login</a>
-    <a class="nav-link" href="/register">Register</a>
-
 
     <%= yield %>
 
