--- a/views/sign/login.erb
+++ b/views/sign/login.erb
@@ -15,8 +15,11 @@
             <% end %>
 
             <form action="/login" method="post">
+
+                <% remember_email = request.cookies['remember_email'] %>
+
                 <div class="form-floating mb-3">
-                    <input class="form-control" id="email" name="email" type="email" placeholder="Input Your Email" />
+                    <input class="form-control" id="email" name="email" type="email" placeholder="Input Your Email" value="<%= remember_email %>" />
                     <label for="email">Email address</label>
                 </div>
                 <div class="form-floating mb-3">
@@ -24,8 +27,11 @@
                     <label for="password">Password</label>
                 </div>
                 <div class="form-check mb-3">
-                    <input class="form-check-input" id="remember" type="checkbox" value="" />
-                    <label class="form-check-label" for="remember">Remember Password</label>
+
+                    <% remember_checked = remember_email ? 'checked' : '' %>
+
+                    <input class="form-check-input" id="remember" name="remember" type="checkbox" <%= remember_checked %> />
+                    <label class="form-check-label" for="remember">Remember Me</label>
                 </div>
                 <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
                     <a class="small" href="/reset_password">Forgot Password?</a>
