--- a/views/admin/user_dashboard/edit.erb
+++ b/views/admin/user_dashboard/edit.erb
@@ -17,21 +17,52 @@
                 <% session[:success] = nil %>
             <% end %>
             <form>
-  <div class="mb-3">
-    <label for="exampleInputEmail1" class="form-label">Email address</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-  </div>
-  <div class="mb-3">
-    <label for="exampleInputPassword1" class="form-label">Password</label>
-    <input type="password" class="form-control" id="exampleInputPassword1">
-  </div>
-  <div class="mb-3 form-check">
-    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-    <label class="form-check-label" for="exampleCheck1">Check me out</label>
-  </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
-</form>
+                <div class="mb-3">
+                    <label for="name" class="form-label">Name</label>
+                    <input type="text" class="form-control" id="name">
+                    <div id="name" class="form-text text-danger">Error Message</div>
+                </div>
+                <div class="mb-3">
+                    <label for="username" class="form-label">Username</label>
+                    <input type="text" class="form-control" id="username">
+                    <div id="username" class="form-text text-danger">Error Username</div>
+                </div>
+                <div class="mb-3">
+                    <label for="email" class="form-label">Email</label>
+                    <input type="text" class="form-control" id="email">
+                    <div id="email" class="form-text text-danger">Error Email</div>
+                </div>
+                <div class="mb-3">
+                    <label for="birthdate" class="form-label">Birtdate</label>
+                    <input type="date" class="form-control" id="birthdate">
+                    <div id="birthdate" class="form-text text-danger">Error birthdate</div>
+                </div>
+                <div class="mb-3">
+                    <label for="address" class="form-label">Address</label>
+                    <input type="text" class="form-control" id="address">
+                    <div id="address" class="form-text text-danger">Error Address</div>
+                </div>
+                <div class="mb-3">
+                    <label for="phone" class="form-label">Phone</label>
+                    <input type="number" class="form-control" id="phone">
+                    <div id="phone" class="form-text text-danger">Error Phone</div>
+                </div>
+                <div class="mb-3">
+                    <label for="photo" class="form-label">Photo</label>
+                    <input type="file" class="form-control" id="photo">
+                    <div id="photo" class="form-text text-danger">Error Photo</div>
+                </div>
+                <div class="mb-3">
+                    <label for="access" class="form-label">Access</label>
+                    <select id="access" class="form-select" aria-label="Default select example">
+                        <option selected>Open this select menu</option>
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                    </select>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
         </div>
     </div>
 </div>
