--- a/views/admin/user_dashboard/edit.erb
+++ b/views/admin/user_dashboard/edit.erb
@@ -16,7 +16,7 @@
                 </div>
                 <% session[:success] = nil %>
             <% end %>
-            <form>
+            <form action="/user/" >
                 <div class="mb-3">
                     <label for="name" class="form-label">Name</label>
                     <input type="text" class="form-control" id="name">
