--- a/views/admin/user_dashboard/edit.erb
+++ b/views/admin/user_dashboard/edit.erb
@@ -16,52 +16,90 @@
                 </div>
                 <% session[:success] = nil %>
             <% end %>
-            <form action="/user/" >
+            <form action="/edit_user/<%= @user['user_id']%>" method="POST" enctype="multipart/form-data" >
                 <div class="mb-3">
                     <label for="name" class="form-label">Name</label>
-                    <input type="text" class="form-control" id="name">
-                    <div id="name" class="form-text text-danger">Error Message</div>
+                    <input type="text" class="form-control" id="name" name="name" value="<%= @user['name'] %>" >
+                    <% if @errors.any? { |e| e.include?('Name') } %>
+                        <div class="form-text text-danger">
+                            <%= @errors.find { |e| e.include?('Name')}%>
+                        </div>
+                    <% end %>
                 </div>
                 <div class="mb-3">
                     <label for="username" class="form-label">Username</label>
-                    <input type="text" class="form-control" id="username">
-                    <div id="username" class="form-text text-danger">Error Username</div>
+                    <input type="text" class="form-control" id="username" name="username" value="<%= @user['username'] %>" >
+                    <% if @errors.any? { |e| e.include?('Username') } %>
+                        <div class="form-text text-danger">
+                            <%= @errors.find { |e| e.include?('Username')}%>
+                        </div>
+                    <% end %>
                 </div>
                 <div class="mb-3">
                     <label for="email" class="form-label">Email</label>
-                    <input type="text" class="form-control" id="email">
-                    <div id="email" class="form-text text-danger">Error Email</div>
+                    <input type="text" class="form-control" id="email" name="email" value="<%= @user['email'] %>" >
+                    <% if @errors.any? { |e| e.include?('Email') } %>
+                        <div class="form-text text-danger">
+                            <%= @errors.find { |e| e.include?('Email')}%>
+                        </div>
+                    <% end %>
                 </div>
                 <div class="mb-3">
-                    <label for="birthdate" class="form-label">Birtdate</label>
-                    <input type="date" class="form-control" id="birthdate">
-                    <div id="birthdate" class="form-text text-danger">Error birthdate</div>
+                    <label for="birthdate" class="form-label">Birthdate</label>
+                    <input type="date" class="form-control" name="birthdate" id="birthdate" value="<%= @user['birthdate'] %>" >
+                    <% if @errors.any? { |e| e.include?('Birthdate') } %>
+                        <div class="form-text text-danger">
+                            <%= @errors.find { |e| e.include?('Birthdate')}%>
+                        </div>
+                    <% end %>
                 </div>
                 <div class="mb-3">
                     <label for="address" class="form-label">Address</label>
-                    <input type="text" class="form-control" id="address">
-                    <div id="address" class="form-text text-danger">Error Address</div>
+                    <input type="text" class="form-control" name="address" id="address" value="<%= @user['address'] %>">
+                    <% if @errors.any? { |e| e.include?('Address') } %>
+                        <div class="form-text text-danger">
+                            <%= @errors.find { |e| e.include?('Address')}%>
+                        </div>
+                    <% end %>
                 </div>
                 <div class="mb-3">
                     <label for="phone" class="form-label">Phone</label>
-                    <input type="number" class="form-control" id="phone">
-                    <div id="phone" class="form-text text-danger">Error Phone</div>
+                    <input type="number" class="form-control" name="phone" id="phone" value="<%= @user['phone'] %>">
+                    <% if @errors.any? { |e| e.include?('Phone') } %>
+                        <div class="form-text text-danger">
+                            <%= @errors.find { |e| e.include?('Phone')}%>
+                        </div>
+                    <% end %>
                 </div>
                 <div class="mb-3">
                     <label for="photo" class="form-label">Photo</label>
+                    <br>
+                    <% if @user['photo'] %>
+                        <img class="img-thumbnail mb-2" src="/uploads/users/<%= @user['photo'] %>" alt="<%= @user['name'] %>" style="max-width: 200px">
+                    <% end %>
                     <input type="file" class="form-control" id="photo">
-                    <div id="photo" class="form-text text-danger">Error Photo</div>
+                    <% if @errors.any? { |e| e.include?('Photo') } %>
+                        <div class="form-text text-danger">
+                            <%= @errors.find { |e| e.include?('Photo')}%>
+                        </div>
+                    <% end %>
                 </div>
                 <div class="mb-3">
                     <label for="access" class="form-label">Access</label>
                     <select id="access" class="form-select" aria-label="Default select example">
-                        <option selected>Open this select menu</option>
+                        <option selected value="<%= @user['access'] %>"><%= @user['access'] %></option>
                         <option value="1">1</option>
                         <option value="2">2</option>
                         <option value="3">3</option>
                     </select>
+                    <% if @errors.any? { |e| e.include?('Access') } %>
+                        <div class="form-text text-danger">
+                            <%= @errors.find { |e| e.include?('Access')}%>
+                        </div>
+                    <% end %>
                 </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="submit" class="btn btn-primary float-end">Submit</button>
+                <a class="btn btn-secondary float-start" href="/admin">Back</a>
             </form>
         </div>
     </div>
