--- a/views/errors/admin_error.erb
+++ b/views/errors/admin_error.erb
@@ -1,6 +1,13 @@
-<%if session[:error] %>
-<div class="alert alert-danger" role="alert">
-  <div><%= session[:error] %></div>
+<div class="container">
+  <div class="row my-5">
+    <div class="col">
+      <%if session[:error] %>
+        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+          <div><%= session[:error] %></div>
+          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+        <% session[:error] = nil %>
+      <% end %>
+    </div>
+  </div>
 </div>
-<% session[:error] = nil %>
-<% end %>
