--- a/views/admin/index.erb
+++ b/views/admin/index.erb
@@ -90,7 +90,7 @@
                         <th>
                             <div class="btn-group" role="group" aria-label="Button Group">
                                 <button type="submit" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteModal<%= user['user_id']%>">Delete</button>
-                                <button type="button" class="btn btn-info text-white">View</button>
+                                <a href="/detail_user/<%= user['user_id']%>" class="btn btn-info text-white">View</a>
                                 <a href="/edit_user/<%= user['user_id']%>" class="btn btn-primary">Edit</a>
                             </div>
                         </th>
