--- a/views/admin/user_dashboard/view.erb
+++ b/views/admin/user_dashboard/view.erb
@@ -6,9 +6,57 @@
     <div class="card mb-4">
         <div class="card-header">
             <i class="fas fa-user me-1"></i>
-            View A Usere
+            View A <%= @user['name']%>
         </div>
         <div class="card-body">
+            <div class="mb-3 row">
+                <label for="name" class="col-sm-2 col-form-label">Name</label>
+                <div class="col-sm-10">
+                    <input type="text" readonly class="form-control-plaintext" id="name" value="<%= @user['name'] %>">
+                </div>
+            </div>
+            <div class="mb-3 row">
+                <label for="username" class="col-sm-2 col-form-label">Username</label>
+                <div class="col-sm-10">
+                    <input type="text" readonly class="form-control-plaintext" id="username" value="<%= @user['username'] %>">
+                </div>
+            </div>
+            <div class="mb-3 row">
+                <label for="email" class="col-sm-2 col-form-label">Email</label>
+                <div class="col-sm-10">
+                    <input type="text" readonly class="form-control-plaintext" id="email" value="<%= @user['email'] %>">
+                </div>
+            </div>
+            <div class="mb-3 row">
+                <label for="birthdate" class="col-sm-2 col-form-label">Birthdate</label>
+                <div class="col-sm-10">
+                    <input type="text" readonly class="form-control-plaintext" id="birthdate" value="<%= @user['birthdate'] %>">
+                </div>
+            </div>
+            <div class="mb-3 row">
+                <label for="address" class="col-sm-2 col-form-label">Address</label>
+                <div class="col-sm-10">
+                    <input type="text" readonly class="form-control-plaintext" id="address" value="<%= @user['address'] %>">
+                </div>
+            </div>
+            <div class="mb-3 row">
+                <label for="phone" class="col-sm-2 col-form-label">Phone</label>
+                <div class="col-sm-10">
+                    <input type="text" readonly class="form-control-plaintext" id="phone" value="<%= @user['phone'] %>">
+                </div>
+            </div>
+            <div class="mb-3 row">
+                <label for="access" class="col-sm-2 col-form-label">Access</label>
+                <div class="col-sm-10">
+                    <input type="text" readonly class="form-control-plaintext" id="access" value="<%= @user['access'] %>">
+                </div>
+            </div>
+            <div class="mb-3 row">
+                <label for="access" class="col-sm-2 col-form-label">Photo</label>
+                <div class="col-sm-10">
+                    <img src="/uploads/users/<>" alt="">
+                </div>
+            </div>
         </div>
     </div>
 </div>
