--- a/views/admin/user_dashboard/view.erb
+++ b/views/admin/user_dashboard/view.erb
@@ -46,17 +46,21 @@
                 </div>
             </div>
             <div class="mb-3 row">
+                <label for="access" class="col-sm-2 col-form-label" for="photo">Photo</label>
+                <div class="col-sm-10">
+                    <% if @user['photo'] %>
+                        <img src="/uploads/users/<%= @user['photo'] %>" style="max-width: 200px">
+                    <% end %>
+                </div>
+            </div>
+            <div class="mb-3 row">
                 <label for="access" class="col-sm-2 col-form-label">Access</label>
                 <div class="col-sm-10">
                     <input type="text" readonly class="form-control-plaintext" id="access" value="<%= @user['access'] %>">
                 </div>
             </div>
-            <div class="mb-3 row">
-                <label for="access" class="col-sm-2 col-form-label">Photo</label>
-                <div class="col-sm-10">
-                    <img src="/uploads/users/<>" alt="">
-                </div>
-            </div>
+            <!-- Back Button -->
+            <a class="btn btn-outline-secondary float-start" href="/admin"><img src="/uploads/items/arrow-left-circle.svg" width="30px"/> Back</a>
         </div>
     </div>
 </div>
