--- a/views/sign/login.erb
+++ b/views/sign/login.erb
@@ -44,7 +44,7 @@
                     <label class="form-check-label" for="remember">Remember Me</label>
                 </div>
                 <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
-                    <a class="small" href="/reset_password">Forgot Password?</a>
+                    <a class="small" href="/forgot_password">Forgot Password?</a>
                     <button type="submit" class="btn btn-primary">Login</button>
                 </div>
             </form>
