--- a/views/sign/forgot_password.erb
+++ b/views/sign/forgot_password.erb
@@ -3,6 +3,10 @@
         <div class="card-header"><h3 class="text-center font-weight-light my-4">Password Recovery</h3></div>
         <div class="card-body">
             <div class="small mb-3 text-muted">Enter your email address and we will send you a link to reset your password.</div>
+            <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                <strong>Danger</strong> You should check in on some of those fields below.
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
             <form action="/forgot_password" method="post">
                 <div class="form-floating mb-3">
                     <input class="form-control" id="email" type="email" name="email" placeholder="Enter Yor Email" />
