adding title in forget & reset password

--- a/views/sign/reset_password.erb
+++ b/views/sign/reset_password.erb
@@ -1,1 +1,36 @@
-<h1>Reset Password</h1>
+<div class="col-lg-5">
+    <div class="card shadow-lg border-0 rounded-lg mt-5">
+        <div class="card-header"><h3 class="text-center font-weight-light my-4 text-uppercase">Password Recovery</h3></div>
+        <div class="card-body">
+            <div class="small mb-3 text-muted text-uppercase" >Enter your New Password</div>
+            <% if @errors&.any? %>
+                <% @errors.each do |error|%>
+                <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                    <strong><%= error %></strong>
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+                <% end %>
+            <% end %>
+            <form action="/forgot_password" method="post">
+                <div class="row mb-3">
+                    <div class="col-md-6">
+                        <div class="form-floating mb-3 mb-md-0">
+                            <input class="form-control" id="password" type="password" name="password" placeholder="Enter New Password" />
+                            <label for="password">New Password</label>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="form-floating mb-3">
+                            <input class="form-control" id="re_password" type="re_password" name="re_password" placeholder="Confirm new Password" />
+                            <label for="re_password">Re Password</label>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="d-grid gap-2">
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
