update login & forgot_password

--- a/views/sign/login.erb
+++ b/views/sign/login.erb
@@ -33,7 +33,7 @@
                     <label for="email">Email address</label>
                 </div>
                 <div class="form-floating mb-3">
-                    <input class="form-control" id="password" name="password" type="password" placeholder="Input Your Password" />
+                    <input class="form-control" id="password" name="password" type="password" placeholder="Input Your Password" value="<%= params[:password]%>" />
                     <label for="password">Password</label>
                 </div>
                 <div class="form-check mb-3">
