--- a/views/sign/forgot_password.erb
+++ b/views/sign/forgot_password.erb
@@ -13,7 +13,7 @@
             <% end %>
             <form action="/forgot_password" method="post">
                 <div class="form-floating mb-3">
-                    <input class="form-control" id="email" type="email" name="email" placeholder="Enter Yor Email" />
+                    <input class="form-control" id="email" type="email" name="email" placeholder="Enter Your Email" value="<%= params[:email]%>" />
                     <label for="email">Email address</label>
                 </div>
                 <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
