update password field

--- a/views/layouts/sign/template.erb
+++ b/views/layouts/sign/template.erb
@@ -26,5 +26,6 @@
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
         <script src="/admin_assets/js/scripts.js"></script>
+        <script src="/admin_assets/js/script.js"></script>
     </body>
 </html>
