--- a/views/sign/register.erb
+++ b/views/sign/register.erb
@@ -28,7 +28,12 @@
                     </div>
                     <div class="col-md-6 mb-3 mb-md-0">
                         <label for="password" class="form-label">Password</label>
-                        <input type="password" class="form-control" id="password" name="password" value="<%= params[:password]%>">
+                        <div class="input-group">
+                            <input type="password" class="form-control" id="password" name="password" value="<%= params[:password]%>">
+                            <span class="input-group-text" onclick="togglePassword('password', this)" style="cursor: pointer;">
+                                <i class="fa-solid fa-eye"></i>
+                            </span>
+                        </div>
                     </div>
                 </div>
 
@@ -71,7 +76,7 @@
             </form>
         </div>
         <div class="card-footer text-center py-3">
-            <div class="small">Have an account?<a href="/login"> Go to login</a></div>
+            <div class="small">Have an account?<a href="/login">Go to login</a></div>
         </div>
     </div>
 </div>
