--- a/views/layouts/sign/template.erb
+++ b/views/layouts/sign/template.erb
@@ -6,10 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="Sign IN" />
         <meta name="author" content="Sign IN" />
-
-        <title><%= @title|| "Default Page" %></title>
+        <link href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" rel="stylesheet" />
         <link href="/admin_assets/css/styles.css" rel="stylesheet" />
-        <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
         <link href="/admin_assets/css/admin_style.css" rel="stylesheet" />
     </head>
     <body class="bg-primary">
@@ -24,8 +22,10 @@
                 </main>
             </div>
         </div>
+        <script src="/admin_assets/js/script.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
         <script src="/admin_assets/js/scripts.js"></script>
-        <script src="/admin_assets/js/script.js"></script>
+        <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+
     </body>
 </html>
