update password in other view

--- a/views/sign/login.erb
+++ b/views/sign/login.erb
@@ -23,23 +23,23 @@
                 <% end %>
             <% end %>
 
-
             <form action="/login" method="post">
-
                 <% remember_email = request.cookies['remember_email'] %>
-
                 <div class="form-floating mb-3">
                     <input class="form-control" id="email" name="email" type="email" placeholder="Input Your Email" value="<%= remember_email %>" />
                     <label for="email">Email address</label>
                 </div>
-                <div class="form-floating mb-3">
-                    <input class="form-control" id="password" name="password" type="password" placeholder="Input Your Password" value="<%= params[:password]%>" />
-                    <label for="password">Password</label>
+                <div class="input-group mb-3">
+                    <span class="input-group-text" onclick="togglePassword('password', this)" style="cursor:pointer;">
+                        <i class="fa-solid fa-eye-slash passwordeyes"></i>
+                    </span>
+                    <div class="form-floating position-relative">
+                        <input class="form-control" id="password" name="password" type="password" placeholder="Input Your Password" value="<%= params[:password]%>" />
+                        <label for="password">Password</label>
+                    </div>
                 </div>
                 <div class="form-check mb-3">
-
                     <% remember_checked = remember_email ? 'checked' : '' %>
-
                     <input class="form-check-input" id="remember" name="remember" type="checkbox" <%= remember_checked %> />
                     <label class="form-check-label" for="remember">Remember Me</label>
                 </div>
