--- a/views/sign/reset_password.erb
+++ b/views/sign/reset_password.erb
@@ -17,15 +17,25 @@
                         <input class="form-control" name="reset_token" type="hidden" value="<%= @reset_token %>" />
                     </div>
                     <div class="col-md-6">
-                        <div class="form-floating mb-3 mb-md-0">
-                            <input class="form-control" id="password" type="password" name="password" placeholder="Enter New Password" value="<%= params[:password]%>" />
-                            <label for="password">New Password</label>
+                        <div class="input-group mb-3">
+                            <span class="input-group-text" onclick="togglePassword('password', this)" style="cursor:pointer;">
+                                <i class="fa-solid fa-eye-slash passwordeyes"></i>
+                            </span>
+                            <div class="form-floating position-relative">
+                                <input class="form-control" id="password" type="password" name="password" placeholder="Enter New Password" value="<%= params[:password]%>" />
+                                <label for="password">New Password</label>
+                            </div>
                         </div>
                     </div>
                     <div class="col-md-6">
-                        <div class="form-floating mb-3">
+                        <div class="input-group mb-3">
+                            <span class="input-group-text" onclick="togglePassword('re_password', this)" style="cursor:pointer;">
+                                <i class="fa-solid fa-eye-slash passwordeyes"></i>
+                            </span>
+                            <div class="form-floating position-relative">
                             <input class="form-control" id="re_password" type="password" name="re_password" placeholder="Confirm new Password" value="<%= params[:re_password]%>" />
                             <label for="re_password">Re Password</label>
+                        </div>
                         </div>
                     </div>
                 </div>
